--- a/stayle.CSS
+++ b/stayle.CSS
@@ -3,6 +3,15 @@ body {
     font-family: Bai Jamjuree;
 }
 
+#container {
+display: flex;
+}
+
+.cartao { 
+    margin: 1rem 1rem;
+    background-color: aqua;
+    
+
 footer {
     background-color: black;
     color: aliceblue;
