--- a/stayle.CSS
+++ b/stayle.CSS
@@ -1,28 +1,47 @@
-body {
-    background-color: aqua;
+body{
+    background-color: black;
     font-family: Bai Jamjuree;
+    color: white;
 }
 
 #container {
-display: flex;
+    display: flex;
 }
 
-.cartao { 
+.cartao{
     margin: 1rem 1rem;
-    background-color: aqua;
-    
+    background-color: rgb(20, 143, 220);
+    height: 20rem;
+    flex-grow: 1;
+    flex-basis: calc(33% -6rem);
+}
+
+.cartao__conteudo{
+    text-align: center;
+    height: 100%;
+}
+
+.cartao__conteudo h3 {
+    background-color: snow;
+    text-align: left;
+    padding: 0.5rem;
+    position: absolute;
+    margin: 0.6%;
+    border-radius: 0.7rem;
+    font-size: 1vw;
+}
 
 footer {
-    background-color: black;
-    color: aliceblue;
+    background-color: gray;
+    color: black;
     position: fixed;
     bottom: 0;
     width: 100%;
-    height:  2rem;
+    height: 2rem;
 }
 
 footer p {
-    text-align: ; center;
-    font-size:  0 . 6rem;
-    margin-top:  0 . 5rem;
+    text-align: center;
+    font-size: 1rem;
+    margin-top: 0.5rem;
 }
