--- a/stayle.CSS
+++ b/stayle.CSS
@@ -1,5 +1,17 @@
+:root
+     -- texto- {color: beige;
+     -- 
+
+}
+
+
+
+
+
+
 body{
-    background-color: black;
+
+    background: url(¨img/bg-desktop,webp¨);
     font-family: Bai Jamjuree;
     color: white;
 }
