--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 :root {
     --text-color: #f7f7f7;
-    --card-front-color: #ed143d;
+    --card-front-color: #ff00d0;
     --card-back-color: #000000;
 }
 
