aula/ o6/o6/ amora vick

--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 :root {
-    --text-color: #f7f7f7;
-    --card-front-color: #00fff2;
-    --card-back-color: #000000;
+    --text-color: #DBE4EF;
+    --card-front-color: #144480;
+    --card-back-color: #00F4BF;
 }
 
 body {
@@ -19,30 +19,37 @@ body {
 
 .cartao {
     margin: 1rem 1rem;
-    background-color: crimson;
+    background-color: aqua;
     height: 20rem;
     flex-grow: 1;
     flex-basis: calc(33% -6rem);
 }
 
 .cartao__conteudo {
+    background-color: var(--card-front-color);
     text-align: center;
     height: 100%;
-    background-color: var(--card-back-color);
     transform-style: preserve-3d;
     transition: transform 300ms ease-in-out;
 }
 
 .cartao__conteudo h3 {
+    color: var(--text-color);
+    border: 1px solid var(--text-color);
     text-align: left;
     padding: 0.5rem;
     position: absolute;
     margin: 0.6rem;
     border-radius: 0.6rem;
     font-size: 1vw;
-    color: var(--text-color);
-    border: 1px solid var(--text-color);
     backface-visibility: hidden;
+}
+
+.cartao__conteudo p {
+    margin-top: 1rem;
+    padding: 2rem;
+    margin-top: 4rem;
+    font-size: 1.4vw;
 }
 
 .cartao__conteudo__pergunta p {
@@ -51,11 +58,11 @@ body {
 }
 
 .cartao__conteudo__resposta p {
-    color: var(--text-color);
+    color: var(--card-back-color);
     font-weight: 700;
 }
 
-.cartao:hover .cartao__conteudo {
+.cartao:active .cartao__conteudo {
     transform: rotateY(180deg);
 }
 
@@ -65,16 +72,13 @@ body {
     position: absolute;
     height: 100%;
     width: 100%;
+    box-sizing: border-box;
 }
 
 .cartao__conteudo__resposta {
     transform: rotateY(180deg);
-}
-
-.cartao__conteudo p {
-    margin-top: 1rem;
-    padding: 2rem;
-    margin-top: 4rem;
+    background-color: rdba(0, 244, 191, 0.2);
+    border: 4px solid var(--card-back-color);
 }
 
 footer {
@@ -92,3 +96,20 @@ footer p {
     margin-top: 0.5rem;
 }
 
+@media (max-width: 560px){
+    body{
+        background: url('img/bd-mobile.webp');
+    }
+
+    .cartao {
+        flex: 1 0 calc(100% - 1rem);
+    }
+
+    .cartao__conteudo h3 {
+        font-size: 3vW;
+    }
+
+    .cartao__conteudo p {
+        font-size: 3.8vw;
+    }
+}
